fixups for overflow highlighting
git-svn-id: https://svn.apache.org/repos/asf/comdev/reporter.apache.org/trunk@1864245 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/wizard/css/wizard.css
+++ b/site/wizard/css/wizard.css
@@ -287,6 +287,9 @@
  width: 540px;
  height: 570px;
  font-size: 11px;
+ white-space: pre;
+ 
+ overflow-x: auto !important;
 }
 
 .unified #tips {
